test/tests/errors/error-array-cannot-ref.sm
// true
// false
/**/
/**/

program {
    array x[1:2];
    ref y = x;
}